--- a/.github/workflows/workflow001.yml
+++ b/.github/workflows/workflow001.yml
@@ -1,13 +1,13 @@
 name: Workflow 1
 
 on:
-  workflow_dispatch:  # Manual Runs....
+  workflow_dispatch:  
   # push:
   #   branches:
-  #     - dev
-  pull_request:
-     branches:
-      - dev 
+  #     - master
+  # pull_request:
+  #    branches:
+  #     - master
 # concurrency:
 #   group: ${{ github.workflow }}-${{ github.ref }}
 #   cancel-in-progress: true
@@ -36,8 +36,7 @@ jobs:
       - name: Step 1
         run: |
          echo "This is Workflow 1 - Job 1"
-         sleep 50
-
+         sleep 60 
   job2:
     runs-on: ubuntu-latest
     needs: job1
@@ -53,7 +52,3 @@ jobs:
       #     else
       #       echo "No lock file to remove."
       #     fi
-        
-
-
-  
