--- a/.github/workflows/workflow002.yml
+++ b/.github/workflows/workflow002.yml
@@ -3,10 +3,10 @@ name: Workflow 2
 # on:
 #   pull_request:
 #     branches:
-#       - dev  # Adjust branch as per your requirements
+#       - master  # we can Adjust the branch as per your requirements
 
 on:
-  workflow_dispatch:  # Manual trigger
+  workflow_dispatch:  # for Manual trigger
   # push:
   #   branches:
   #     - dev
@@ -38,7 +38,7 @@ jobs:
       - name: Step 1
         run: |
          echo "This is Workflow 2 - Job 1"
-          sleep 40 
+          sleep 60
   job2:
     runs-on: ubuntu-latest
     needs: job1
